# ChangeLog for java-virtuals/jmx
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jmx/ChangeLog,v 1.4 2008/06/26 16:36:00 nixnut Exp $

  26 Jun 2008; nixnut <nixnut@gentoo.org> jmx-1.0.ebuild:
  Stable on ppc wrt bug 228827

  24 Jun 2008; Christian Faulhammer <opfer@gentoo.org> jmx-1.0.ebuild:
  stable x86, bug 228827

  23 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> jmx-1.0.ebuild:
  amd64 stable, bug #228827

*jmx-1.0 (28 Apr 2008)

  28 Apr 2008; Petteri Räty <betelgeuse@gentoo.org> +jmx-1.0.ebuild:
  Initial addition of the jmx virtual.
