@@ -1,3 +1,4 @@
+EBUILD jmx-1.0-r1.ebuild 669 RMD160 9ce3aab2480537c7a7d3b5191d00201add75d59a SHA1 cc6aac6ccad1d758553fd694109e0dab56dbb407 SHA256 9872ae27856686ae7075ed6ae95cf9b6ff91e694ffa445d8078a783f782a66cd
 EBUILD jmx-1.0.ebuild 779 RMD160 7e39b2f50d4afdaf2c8d257a15adc8e3990be207 SHA1 3724148bcf30d02d4f4cf380f3a283d4226058bc SHA256 fa1bb2d6a68bb910e1080e4e0069e118a5bfd28af4a093ace1f95b3d1d7d5031
-MISC ChangeLog 624 RMD160 bed76d644925e5217cb18b5d23948b3844d8ff5b SHA1 3b992e678fda1750cde2ba9984c1390bb496e6b3 SHA256 8c58fec82bbe2ea7cba687fbfbcef68afcbe522ff5d0411b5c9a841b516feadf
+MISC ChangeLog 783 RMD160 3d3b3b185908553ae36c0998790376e092f3109e SHA1 fd3dcafdc92ef7fe92057e6b40885f9b8445af5f SHA256 4763d4c0c8129409a032b52ae1ceffe5f23e2b1d0a6dbbb09e716da20f23fb63
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
