@@ -1,6 +1,11 @@
 # ChangeLog for java-virtuals/jmx
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jmx/ChangeLog,v 1.4 2008/06/26 16:36:00 nixnut Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jmx/ChangeLog,v 1.5 2009/05/23 11:43:22 ali_bush Exp $
+
+*jmx-1.0-r1 (23 May 2009)
+
+  23 May 2009; Alistair Bush <ali_bush@gentoo.org> +jmx-1.0-r1.ebuild:
+  Bump to support features available in java-config-2.1.8
 
   26 Jun 2008; nixnut <nixnut@gentoo.org> jmx-1.0.ebuild:
   Stable on ppc wrt bug 228827
